fix svg cropping

--- a/style.scss
+++ b/style.scss
@@ -1963,6 +1963,7 @@ p,
 
 .why-wood-mills-illustration {
   display: block;
+  overflow: visible;
 
   &.manufacturers-illustration {
     width: 5.625rem;
